Made the calculation of the monthly payment and the final amount Made sorting of the output List<LoanOfferDTO>